Worked on the body a bit more, added some transition animation for the navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,15 +25,37 @@
                 <h4>Vyt</h4>
             </div>
             <ul class="navButtons">
-                <li><a href="#">Write Blog</a></li>
+                <li><a href="#" class="write">Write Blog</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">About Me</a></li>
             </ul>
         </nav>
 
         <div class="content">
-            <div class="letter01">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+            <div class="letter">
+                <header>
+                    Blog 00
+                </header>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+                <footer>
+                    28/05/2020
+                </footer>
+            </div>
+            <div class="letter">
+                <header>
+                    Blog 01
+                </header>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+                <footer>
+                    29/05/2020
+                </footer>
+            </div>
         </div>
+
         <!--<script src="" async defer></script>--j>-->
     </body>
 </html>
