--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,61 +1,11 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Vyt - Blogging Made Simple</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet"> 
-    </head>
-    <body>
-        <!--
-            <header>
-                <img class="logo" src="218733_web.jpg" alt="Our Logo">
-                <a class="blogRelated" href="#"><button>New Post</button></a>
-                <nav>
-                    <ul class="navButtons">
-                        <li><a href="#"><button>Contact</button></a></li>
-                        <li><a href="#"><button>About Me</button></a></li>
-                    </ul>
-                </nav>
-            </header>
-        -->
-        <nav>
-            <div class="logo">
-                <h4>Vyt</h4>
-            </div>
-            <ul class="navButtons">
-                <li><a href="#" class="write">Write Blog</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">About Me</a></li>
-            </ul>
-        </nav>
-
-        <div class="content">
-            <div class="letter">
-                <header>
-                    Blog 00
-                </header>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
-                <footer>
-                    28/05/2020
-                </footer>
-            </div>
-            <div class="letter">
-                <header>
-                    Blog 01
-                </header>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
-                <footer>
-                    29/05/2020
-                </footer>
-            </div>
-        </div>
-
-        <!--<script src="" async defer></script>--j>-->
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>frontend</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
+  </body>
 </html>
